--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Sitio web de Augusto Romera, desarrollador fullstack. Encuentra aquí información sobre mis proyectos y servicios.">
+    <meta name="keywords" content="Augusto Romera, desarrollador, fullstack, proyectos, servicios">
+    <meta name="author" content="Augusto Romera">
+    <link rel="icon" type="image/png" href="/src/assets/images/logo/Augusto romera dev.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Augusto Romera / Fullstack Developer</title>
+    <title>Augusto Romera / Desarrollador Fullstack</title>
   </head>
   <body>
     <div id="root"></div>
